added web documentation

--- a/Web/index.html
+++ b/Web/index.html
@@ -14,7 +14,7 @@
 		<div id="sidebar">
 			<header id="header">
 				<a href="#" class="image avatar"><img src="assets/images/avatar.jpg" alt="" /></a>
-				<h1><strong>I am John Doe</strong>, a photographer from Champaign, Illinois.</h1>
+				<h1><strong>I am Alex Doe</strong>, a photographer from Champaign, Illinois.</h1>
 			</header>
 		</div>
 
@@ -24,7 +24,7 @@
 			<!-- Section One :: About -->
 			<section id="one">
 				<header class="major">
-					<h2>About <strong>John Doe</strong></h2>
+					<h2>About <strong>Alex Doe</strong></h2>
 				</header>
 				<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 				<div class="actions">
@@ -36,47 +36,40 @@
 			<section id="two">
 				<h2>Recent Work</h2>
 				<div class="row">
-					<div class="carousel-container">
+					<div id="carousel-container" class="carousel-container">
 						<article class="work-item">
-							<a href="assets/images/fulls/01.jpg" class="image fit thumb"><img src="assets/images/thumbs/01.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/fulls/01.jpg" alt="" /></a>
 							<h3>Magna sed consequat tempus</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 						<article class="work-item">
-							<a href="assets/images/fulls/02.jpg" class="image fit thumb"><img src="assets/images/thumbs/02.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/fulls/02.jpg" alt="" /></a>
 							<h3>Ultricies lacinia interdum</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 						<article class="work-item">
-							<a href="assets/images/fulls/03.jpg" class="image fit thumb"><img src="assets/images/thumbs/03.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/fulls/03.jpg" alt="" /></a>
 							<h3>Tortor metus commodo</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 						<article class="work-item">
-							<a href="assets/images/fulls/04.jpg" class="image fit thumb"><img src="assets/images/thumbs/04.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/fulls/04.jpg" alt="" /></a>
 							<h3>Quam neque phasellus</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 						<article class="work-item">
-							<a href="assets/images/fulls/05.jpg" class="image fit thumb"><img src="assets/images/thumbs/05.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/fulls/05.jpg" alt="" /></a>
 							<h3>Nunc enim commodo aliquet</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 						<article class="work-item">
-							<a href="assets/images/fulls/06.jpg" class="image fit thumb"><img src="assets/images/thumbs/06.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/fulls/06.jpg" alt="" /></a>
 							<h3>Risus ornare lacinia</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 					</div>
 				</div>
-
-				<!-- 
-				*	Level 2 or above only:
-				* 	When the following button is pressed, fetch some photos from the internet 
-				* 	and display them in the style and manner of the images above. Read the 
-				* 	Level 2 documentation for more details. Level 1 competitors can style this button,
-				* 	but do not have to implement the functionality described above.
-				 -->
+				<!-- Note: Level 1 competitors can style this button, but do not have to implement the functionality described in Level 2's documentation. -->
 				<button id="fetch-more-photos" class="js-fetch-more-photos fetch-more-photos">View More Photos</button>
 
 			</section>
@@ -129,7 +122,7 @@
 				<li class="link link-envelope-o"><a src="#">Email</a></li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; John Doe Photography, 2015</li>
+				<li>&copy; Alex Doe Photography, 2015</li>
 			</ul>
 		</footer>
 
