--- a/Web/index.html
+++ b/Web/index.html
@@ -38,32 +38,32 @@
 				<div class="row">
 					<div id="carousel-container" class="carousel-container">
 						<article class="work-item">
-							<a href="#" class="image fit thumb"><img src="assets/images/fulls/01.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/full/01.jpg" alt="" /></a>
 							<h3>Magna sed consequat tempus</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 						<article class="work-item">
-							<a href="#" class="image fit thumb"><img src="assets/images/fulls/02.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/full/02.jpg" alt="" /></a>
 							<h3>Ultricies lacinia interdum</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 						<article class="work-item">
-							<a href="#" class="image fit thumb"><img src="assets/images/fulls/03.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/full/03.jpg" alt="" /></a>
 							<h3>Tortor metus commodo</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 						<article class="work-item">
-							<a href="#" class="image fit thumb"><img src="assets/images/fulls/04.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/full/04.jpg" alt="" /></a>
 							<h3>Quam neque phasellus</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 						<article class="work-item">
-							<a href="#" class="image fit thumb"><img src="assets/images/fulls/05.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/full/05.jpg" alt="" /></a>
 							<h3>Nunc enim commodo aliquet</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
 						<article class="work-item">
-							<a href="#" class="image fit thumb"><img src="assets/images/fulls/06.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb"><img src="assets/images/full/06.jpg" alt="" /></a>
 							<h3>Risus ornare lacinia</h3>
 							<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</article>
