--- a/Web/index.html
+++ b/Web/index.html
@@ -128,6 +128,6 @@
 
 		<!-- Scripts -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-		<script type="assets/index.js"></script>
+		<script src="assets/index.js"></script>
 	</body>
 </html>
